nbproject/private/Default-build.log
g++ main.cpp -o vroom -g
In file included from utils.hpp:9,
                 from main.cpp:14:
carro.hpp:63:5: error: default argument missing for parameter 3 of ‘Carro::Carro(std::__cxx11::string, std::__cxx11::string, char, unsigned int, unsigned int, unsigned int)’
     Carro(std::string marc, std::string mod = "base", char ide, unsigned int ener, unsigned int maxen,unsigned int start_energia);
     ^~~~~
carro.hpp:63:5: error: default argument missing for parameter 4 of ‘Carro::Carro(std::__cxx11::string, std::__cxx11::string, char, unsigned int, unsigned int, unsigned int)’
carro.hpp:63:5: error: default argument missing for parameter 5 of ‘Carro::Carro(std::__cxx11::string, std::__cxx11::string, char, unsigned int, unsigned int, unsigned int)’
carro.hpp:63:5: error: default argument missing for parameter 6 of ‘Carro::Carro(std::__cxx11::string, std::__cxx11::string, char, unsigned int, unsigned int, unsigned int)’
make: *** [Makefile:5: vroom] Error 1
